Adding a warning notification

--- a/src/app/@ansyn/menu-items/tools/go-to/go-to/go-to.component.html
+++ b/src/app/@ansyn/menu-items/tools/go-to/go-to/go-to.component.html
@@ -15,6 +15,7 @@
 		<ansyn-utm
 			*ngSwitchCase="'utm'"
 			name="to"
+			[notification]="notification"
 			[(ngModel)]="inputs.from"
 			(ngModelChange)="convert($event, from, to, 'to')"
 			(copyToClipBoardHandler)="copyToClipBoard($event)"
@@ -28,6 +29,7 @@
 		<ansyn-utm
 			*ngSwitchCase="'utm'"
 			name="to"
+			[notification]="notification"
 			[(ngModel)]="inputs.to"
 			(ngModelChange)="convert($event, to, from, 'from')"
 			(copyToClipBoardHandler)="copyToClipBoard($event)"
