--- a/src/app/@ansyn/core/forms/ansyn-input/ansyn-input.component.html
+++ b/src/app/@ansyn/core/forms/ansyn-input/ansyn-input.component.html
@@ -1,13 +1,8 @@
-<input [(ngModel)]="value"
-	   [id]="id"
-	   [required]="required"
-	   [name]="name"
-	   #input
-	   [autocomplete]="autocomplete"
-	   (blur)="onBlur()">
-
-<span></span>
-
-<label [for]="id">
-	{{label}}
-</label>
+<mat-form-field class="example-full-width">
+	<input matInput
+		   #input
+		   [placeholder]="label"
+		   [autocomplete]="autocomplete"
+		   (blur)="onBlur()"
+		   [(ngModel)]="value">
+</mat-form-field>
