--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -264,7 +264,8 @@
     },
     "Proj4": {
       "ed50": "+proj=utm +datum=ed50 +zone=${zone} +ellps=intl +units=m + no_defs",
-      "ed50Customized": ""
+      "ed50Customized": "",
+      "ed50Notification": ""
     },
     "ImageProcParams": [
       {
