finish add dataInputFilterConfig to multipleOverlaysSourceConfig

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -278,134 +278,7 @@
       "reset": "Reset timeline (according to the time filter)",
       "enlarge": "Expand timeline",
       "quickloop": "Next overlay from the quick loop (key: Q)"
-    },
-    "dataInputFiltersConfig": {
-      "IMISIGHT": {
-        "inActive": {{ getv "/ansyn/overlay/imisight/inactive" "true" }},
-      	"treeViewItem": {
-		  "text":"Imisight",
-		  "value": 1,
-		  "collapsed": true,
-		  "children": [
-			 {
-				"text": "All",
-				"value": {
-				  "sensorType": "All"
-				}
-			  }
-			]
-		  }
-	  },
-	  "TB": {
-		  "inActive": {{ getv "/ansyn/overlay/tb/inactive" "false" }},
-		  "treeViewItem": {
-			  "text":"TB",
-			  "value": 1,
-				  "collapsed": true,
-				  "children": [
-				  	{
-					  "text": "Drone Imagery (JPG)",
-					  "value": {
-						"sensorType": "Drone Imagery (JPG)"
-					  }
-					},
-					{
-					  "text": "Drone Map (GeoTIFF)",
-					  "value": {
-						"sensorType": "Drone Map (GeoTIFF)"
-					  }
-					},
-					{
-					  "text": "Satellite GeoTIFF",
-					  "value": {
-						"sensorType": "Satellite GeoTIFF"
-					  }
-					},
-					{
-					  "text": "Others",
-					  "value": {
-						"sensorType": "others"
-					  }
-					}
-				  ]
-		  }
-	  },
-      "PLANET": {
-        "inActive": {{ getv "/ansyn/overlay/planet/inactive" "false" }},
-        "treeViewItem": {
-			"text": "Planet",
-			"value": 1,
-				"collapsed": true,
-				"children": [
-				  {
-					"text": "REScene",
-					"value": {
-					  "sensorType": "REScene"
-					}
-				  },
-				  {
-					"text": "PSScene3Band",
-					"value": {
-					  "sensorType": "PSScene3Band"
-					}
-				  },
-				  {
-					"text": "PSOrthoTile",
-					"value": {
-					  "sensorType": "PSOrthoTile"
-					}
-				  },
-				  {
-					"text": "REOrthoTile",
-					"value": {
-					  "sensorType": "REOrthoTile"
-					}
-				  },
-				  {
-					"text": "SkySatScene",
-					"value": {
-					  "sensorType": "SkySatScene"
-					}
-				  },
-				  {
-					"text": "Landsat8L1G",
-					"value": {
-					  "sensorType": "Landsat8L1G"
-					}
-				  },
-				  {
-					"text": "Sentinel2L1C",
-					"value": {
-					  "sensorType": "Sentinel2L1C"
-					}
-				  },
-				  {
-					  "text": "Others",
-					  "value": {
-						"sensorType": "others"
-					  }
-					}
-				]
-          }
-        },
-        "OPEN_AERIAL": {
-          "inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "false" }},
-          "treeViewItem": {
-            "text": "OpenAerial",
-            "value": 1,
-				"indeterminate": true,
-				"collapsed": true,
-				"children": [
-				  {
-					"text": "UAV",
-					"value": {
-					  "sensorType": "UAV"
-					}
-				  }
-				]
-          }
-        }
-      }
+    }
   },
   "coreConfig": {
 	"welcomeNotification": {
@@ -1011,7 +884,62 @@
           ]
         }
       ],
-      "blacklist": []
+      "blacklist": [],
+      "dataInputFiltersConfig": {
+		"text": "Planet",
+		"value": 1,
+			"collapsed": true,
+			"children": [
+			  {
+				"text": "REScene",
+				"value": {
+				  "sensorType": "REScene"
+				}
+			  },
+			  {
+				"text": "PSScene3Band",
+				"value": {
+				  "sensorType": "PSScene3Band"
+				}
+			  },
+			  {
+				"text": "PSOrthoTile",
+				"value": {
+				  "sensorType": "PSOrthoTile"
+				}
+			  },
+			  {
+				"text": "REOrthoTile",
+				"value": {
+				  "sensorType": "REOrthoTile"
+				}
+			  },
+			  {
+				"text": "SkySatScene",
+				"value": {
+				  "sensorType": "SkySatScene"
+				}
+			  },
+			  {
+				"text": "Landsat8L1G",
+				"value": {
+				  "sensorType": "Landsat8L1G"
+				}
+			  },
+			  {
+				"text": "Sentinel2L1C",
+				"value": {
+				  "sensorType": "Sentinel2L1C"
+				}
+			  },
+			  {
+				  "text": "Others",
+				  "value": {
+					"sensorType": "others"
+				  }
+				}
+			]
+		}
     },
     "OPEN_AERIAL": {
     	"inActive": {{ getv "/ansyn/overlay/open/aerial/inactive" "false" }},
@@ -1053,7 +981,21 @@
 				]
 			}
 		],
-		"blacklist": []
+		"blacklist": [],
+		"dataInputFiltersConfig": {
+			"text": "OpenAerial",
+			"value": 1,
+				"indeterminate": true,
+				"collapsed": true,
+				"children": [
+				  {
+					"text": "UAV",
+					"value": {
+					  "sensorType": "UAV"
+					}
+				  }
+				]
+		  }
 	},
     "IMISIGHT": {
     	"inActive": {{ getv "/ansyn/overlay/imisight/inactive" "true" }},
@@ -1095,7 +1037,20 @@
 				]
 			}
 		],
-		"blacklist": []
+		"blacklist": [],
+		"dataInputFiltersConfig": {
+			  "text":"Imisight",
+			  "value": 1,
+			  "collapsed": true,
+			  "children": [
+				 {
+					"text": "All",
+					"value": {
+					  "sensorType": "All"
+					}
+				  }
+				]
+			  }
 	}
   },
   "idahoOverlaysSourceConfig": {
