--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -4,8 +4,9 @@
 
 	<ng-template [ngIf]="mapsList">
 		<div *ngFor="let mapData of mapsList; count as count"
+			 tabindex="0"
 			 class="map-container-wrapper"
-			 (click)="clickMapContainer(mapData.id)"
+			 (click)="clickMapContainer($event, mapData.id)"
 			 (dblclick)="dbclick()">
 			<ansyn-imagery-container class="map"
 									 [mapState]="mapData"
