--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -62,10 +62,10 @@
 				"mapType": "openLayersMap",
 				"sourceType": "{{ getv "/ansyn/imagery/mapsource" "ESRI_4326" }}"
               },
-              "id": "af3b94d2-03ff-44e6-9f73-10d386aff493"
+              "id": null
             }
           ],
-          "activeMapId": "af3b94d2-03ff-44e6-9f73-10d386aff493"
+          "activeMapId": null
         },
         "layers": {
           "activeLayersIds": []
