--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.html
@@ -7,6 +7,7 @@
 	<div class="layer">
 		<div class="maps-container">
 			<ansyn-imageries-manager></ansyn-imageries-manager>
+			<ansyn-map-popup></ansyn-map-popup>
 		</div>
 
 		<div class="status-timeline-container">
