--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -4,7 +4,7 @@
 	 [style.width.px]="clickMenuProps .boundingRect.width"
 	 [style.height.px]="clickMenuProps.boundingRect.height"
 	 [style.left.px]="clickMenuProps.boundingRect.left"
-	 eventListener="mousedown"
+	 eventListener="pointerdown"
 	 (ansynClickOutside)="close()">
 
 	<div class="context-menu">
