Fixing compilation warning: start -> flex-start

--- a/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/overlays/components/overlay-overview/overlay-overview.component.less
@@ -22,7 +22,7 @@
 		border: 2px white solid;
 		display: flex;
 		flex-direction: column;
-		justify-content: start;
+		justify-content: flex-start;
 		align-items: center;
 		position: relative;
 		main {
