Adding a shadow map element for double buffer, beside the shadow map element for the north calculation

--- a/src/app/@ansyn/imagery/map/map.component.html
+++ b/src/app/@ansyn/imagery/map/map.component.html
@@ -1,2 +1,3 @@
-<div #mapElementShadow style="visibility: hidden"></div>
+<div #mapElementShadowNorth style="visibility: hidden"></div>
+<div #mapElementShadowDoubleBuffer style="visibility: hidden"></div>
 <div #mapElement></div>
