Adding a timeout to the background tiles loading

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1196,5 +1196,9 @@
 			"regionLengthInMeters": 100
 		}
 	}
+  },
+  "tilesLoadingConfig": {
+  	"debounceTimeInMs": 500,
+  	"timeoutInMs": 3000
   }
 }
