--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -30,6 +30,19 @@
 		top: 6px;
 		display: flex;
 
+		button.drag-me {
+			background: transparent;
+			color: white;
+			border: none;
+			outline: none;
+			i {
+				opacity: .6;
+			}
+			&:hover i {
+				opacity: .8;
+			}
+		}
+
 		button {
 			position: relative;
 			padding: 4px 6px;
