(fix): changed weight to width

--- a/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/map-facade/components/annotation-context-menu/annotation-context-menu.component.html
@@ -21,7 +21,7 @@
 			<li class="expanded-selection line-width-selection">
 				<p>
 					<button [class.active]="clickMenuProps.showWeight" (click)="toggleWeight()"><i
-						class="icon-annotation-weight" tooltip-value="Weight" tooltip-class="bottom"></i></button>
+						class="icon-annotation-weight" tooltip-value="Width" tooltip-class="bottom"></i></button>
 					<ansyn-annotations-weight
 						[show]="clickMenuProps.showWeight"
 						[properties]="clickMenuProps.style.initial"
