--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -385,7 +385,11 @@
 		 	"alg_2": "name 2"
 	   	}
     },
-    "needToUseLayerExtent": false
+    "needToUseLayerExtent": false,
+    "tilesLoadingDoubleBuffer": {
+    	"debounceTimeInMs": 500,
+	    "timeoutInMs": 3000
+    }
   },
   "menuConfig": {
     "menuItems": {{ getv "/ansyn/menu/items" "null" }},
@@ -1196,9 +1200,5 @@
 			"regionLengthInMeters": 100
 		}
 	}
-  },
-  "tilesLoadingConfig": {
-  	"debounceTimeInMs": 500,
-  	"timeoutInMs": 3000
   }
 }
