OpenLayers map double buffer (#2050)
* A basic scheme: in resetView() load the main layer into a background map first, and only then assign it to the real map.
I try to use the progress indications from monitor.plugin, to determine when the tile loading has ended

* Adding the new plugin dependency to "deps"

* Adapting resetView() for an additional, background map (not finished)

* Adapting resetView() for an additional, background map (cont.)

* Adapting resetView() for an additional, background map (cont.)

* Fixing strange type error

* Set view and position of mapObject before backgroundMapObject, because the projection service gets the view from mapObject..

* Replaceing a strange use of "constructor" property (probably worked by chance)

* Provider: trying to intercept the progress bar events (not finished)

* Trying to listen to tile progress events

* Listen to tile progress events, and subsequently set layer to active map

* Setting a flag in the cached layers, so that we can later distinguish, whether a layer has been read from the layers cache, or not

* Adding an enum and a constant, to order better the properties that we set on the layer

* If the layer comes from the layers cache, add the layer immediately to the active map, rather than to the background map.
--Now moving back along the timeline seems to work ok. But moving foreward again still erases the view.

* Sign a layer as read from cache - now not with cloning (it caused a display problem)

* monitor.plugin tweaks

* Tweaks after merge with master

* Tweaks after merge with master

* Adding debounce, to compensate for strange multiple loads when reading tiles from the browser cache (e.g. after browser refresh)

* Remove redundant combineLatest()

* Using Yair's @AutoSubscription in map providers

* Now resetView() does not resolve, until the background map finishes loading (causing errors - not finished)

* Disengaging openLayersMap.initMap() from 

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -385,7 +385,11 @@
 		 	"alg_2": "name 2"
 	   	}
     },
-    "needToUseLayerExtent": false
+    "needToUseLayerExtent": false,
+    "tilesLoadingDoubleBuffer": {
+    	"debounceTimeInMs": 500,
+	    "timeoutInMs": 3000
+    }
   },
   "menuConfig": {
     "menuItems": {{ getv "/ansyn/menu/items" "null" }},
