--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -17,6 +17,7 @@
 		overflow: hidden;
 
 		div.map-container-wrapper {
+			position: absolute;
 			overflow: hidden;
 			&.draggable {
 				.active-border {
@@ -87,7 +88,8 @@
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
-				position: relative;
+				top: 0;
+				left: 0;
 				width: 100%;
 				height: 100%;
 				div.active-border {
@@ -101,9 +103,16 @@
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 100%;
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
 				div.active-border {
 					height: @height-minus-status;
 				}
@@ -113,9 +122,16 @@
 		&.layout3 {
 			flex-direction: column;
 			div.map-container-wrapper {
-				position: relative;
 				width: 100%;
 				height: 50%;
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 50%;
+					left: 0;
+				}
 				&:last-child {
 					div.active-border {
 						height: @height-minus-status;
@@ -128,7 +144,6 @@
 		}
 		&.layout4 {
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 50%;
 				&:first-child {
@@ -143,12 +158,23 @@
 						bottom: @status-bar-height;
 					}
 				}
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
+				&:nth-child(3) {
+					top: 50%;
+					left: 50%;
+				}
 			}
 			flex-direction: column;
 		}
 		&.layout5 {
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 50%;
 				&:first-child {
@@ -163,11 +189,22 @@
 						bottom: @status-bar-height;
 					}
 				}
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 50%;
+					left: 0;
+				}
+				&:nth-child(3) {
+					top: 50%;
+					left: 50%;
+				}
 			}
 		}
 		&.layout6 {
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 50%;
 				&:nth-child(3), &:nth-child(4) {
@@ -177,6 +214,22 @@
 					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
 						bottom: @status-bar-height;
 					}
+				}
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
+				&:nth-child(3) {
+					top: 50%;
+					left: 0;
+				}
+				&:nth-child(4) {
+					top: 50%;
+					left: 50%;
 				}
 			}
 		}
