feat: drag drop maps (#2086)
* feat: drag drop maps

* remove redundant css

* drag drop as provider

* remove OnInit from drag drop service

* fix: libs

* remove DOCUMENT injection from test

* refactor: drag drop maps

* update size

* rxjs fork join

* revert transition time

--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.html
@@ -1,4 +1,13 @@
 <div class="buttons">
+	<button
+		*ngIf="mapsAmount > 1"
+		class="drag-me"
+		tooltip-value="Move"
+		tooltip-class="bottom"
+		(mousedown)="onMove.emit($event)">
+		<i class="fa fa-arrows"></i>
+	</button>
+
 	<button (click)="backToWorldView()"
 			class="back-to-world-view"
 			*ngIf="overlay"
