--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -17,6 +17,7 @@
 		overflow: hidden;
 
 		div.map-container-wrapper {
+			position: absolute;
 			overflow: hidden;
 		}
 
@@ -79,7 +80,8 @@
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
-				position: relative;
+				top: 0;
+				left: 0;
 				width: 100%;
 				height: 100%;
 				div.active-border {
@@ -93,9 +95,16 @@
 				bottom: @status-bar-height;
 			}
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 100%;
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
 				div.active-border {
 					height: @height-minus-status;
 				}
@@ -105,9 +114,16 @@
 		&.layout3 {
 			flex-direction: column;
 			div.map-container-wrapper {
-				position: relative;
 				width: 100%;
 				height: 50%;
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 50%;
+					left: 0;
+				}
 				&:last-child {
 					div.active-border {
 						height: @height-minus-status;
@@ -120,7 +136,6 @@
 		}
 		&.layout4 {
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 50%;
 				&:first-child {
@@ -135,12 +150,23 @@
 						bottom: @status-bar-height;
 					}
 				}
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
+				&:nth-child(3) {
+					top: 50%;
+					left: 50%;
+				}
 			}
 			flex-direction: column;
 		}
 		&.layout5 {
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 50%;
 				&:first-child {
@@ -155,11 +181,22 @@
 						bottom: @status-bar-height;
 					}
 				}
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 50%;
+					left: 0;
+				}
+				&:nth-child(3) {
+					top: 50%;
+					left: 50%;
+				}
 			}
 		}
 		&.layout6 {
 			div.map-container-wrapper {
-				position: relative;
 				width: 50%;
 				height: 50%;
 				&:nth-child(3), &:nth-child(4) {
@@ -169,6 +206,22 @@
 					/deep/ .ol-mouse-position, /deep/ .ol-scale-line, /deep/ ansyn-overlay-source-type-notice {
 						bottom: @status-bar-height;
 					}
+				}
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
+				&:nth-child(3) {
+					top: 50%;
+					left: 0;
+				}
+				&:nth-child(4) {
+					top: 50%;
+					left: 50%;
 				}
 			}
 		}
