--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -373,8 +373,8 @@
 		 	"alg_1": "name 1",
 		 	"alg_2": "name 2",
 		 	"isGeoRegistered": "Is Geo Registered",
-		 	"NotGeoRegistered": "Not Geo Registered",
-			"PoorGeoRegistered": "Poor Geo Registered"
+		 	"notGeoRegistered": "Not Geo Registered",
+			"poorGeoRegistered": "Poor Geo Registered"
 	   	}
     },
     "needToUseLayerExtent": false,
