--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -372,7 +372,7 @@
 		 	"Sentinel-2A": "Sentinel 2A",
 		 	"alg_1": "name 1",
 		 	"alg_2": "name 2",
-		 	"isGeoRegistered": "Is Geo Registered",
+		 	"geoRegistered": "Geo Registered",
 		 	"notGeoRegistered": "Not Geo Registered",
 			"poorGeoRegistered": "Poor Geo Registered"
 	   	}
