--- a/src/app/@ansyn/assets/styles/tooltip.css
+++ b/src/app/@ansyn/assets/styles/tooltip.css
@@ -9,6 +9,7 @@
 	content: attr(tooltip-value);
 }
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="top"]:after {
+	/*left: auto;*/
 	bottom: auto;
 	transform: translateY(-100%);
 }
@@ -24,6 +25,7 @@
 	transform: translateY(calc(-100% - 15px));
 }
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"]:after {
+	/*left: auto;*/
 	top: auto;
 	bottom: 0;
 	transform: translateY(100%);
@@ -43,6 +45,7 @@
 	transform: translate(100%, 0);
 }
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="right"]:not([tooltip-class*="top"]):not([tooltip-class*="bottom"]):hover:after {
+	left: auto;
 	transform: translate(calc(100% + 15px), 0);
 }
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="left"]:not([tooltip-class*="top"]):not([tooltip-class*="bottom"]):after {
