hot-fix: tooltip

--- a/src/app/@ansyn/assets/styles/tooltip.css
+++ b/src/app/@ansyn/assets/styles/tooltip.css
@@ -25,7 +25,7 @@
 	transform: translateY(calc(-100% - 15px));
 }
 [tooltip-value]:not(.active):not(:disabled)[tooltip-class*="bottom"]:after {
-	/*left: auto;*/
+	left: auto;
 	top: auto;
 	bottom: 0;
 	transform: translateY(100%);
