--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -142,6 +142,15 @@ div.menu-wrapper {
 		}
 
 	}
+
+	div.hide-menu {
+		width: 100%;
+		margin-bottom: 5px;
+	}
+
+	div.show-menu {
+		width: 100%;
+	}
 }
 
 @media screen and (max-width: 1400px) {
