Try to change height instead of width

--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -23,7 +23,8 @@ div.menu-wrapper {
 		transition: width 0.5s;
 
 		&.collapsed {
-			width: @menu-collapsed-width;
+			height: fit-content;
+			//width: @menu-collapsed-width;
 		}
 
 		div.menu-btn {
