1 Back to width transition 2 Updated icons

--- a/src/app/@ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/assets/styles/icons.css
@@ -319,10 +319,13 @@
 	content: "\e91e";
 }
 
+.icon-hide-menu {
+	transform: rotate(180deg);
+}
 .icon-hide-menu:before {
 	content: '\e92a';
 }
 
 .icon-show-menu:before {
-	content: '\e92b';
+	content: '\e92a';
 }
