--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -23,8 +23,8 @@ div.menu-wrapper {
 		transition: width 0.5s;
 
 		&.collapsed {
-			height: fit-content;
-			//width: @menu-collapsed-width;
+			width: @menu-collapsed-width;
+			justify-content: center;
 		}
 
 		div.menu-btn {
